--- a/index.html
+++ b/index.html
@@ -1,60 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Seasons!</h1>
-  <p>hello</p>
-  <h5>Changing, Fleeting, Cycle</h5> 
+  <head>
+    <link rel=stylesheet href=index.css>
+  </head>
+  <body>
+    <h1>Anime</h1>
+    <a href="index.html">home</a>
+    <a href="dragon%20ball%20z.html">Dragon Ball Z</a>
+    <a href="naruto.html">Naruto</a>
+    <a href=yu-gi-oh.html>Yu-gi-oh</a>
+    <a href="attack%20on%20titan.html">Attack on Titan</a>
+    <a href=death%20note.html>Death note</a>
 
-<!-- Winter-->
-  <h2 class="winter">Winter</h2>
-  <h5 class="winter">arctic</h5>
-  <h5 class="winter">cozy</h5>
-  <h5 class="winter">enchanted</h5>
-  <h5 class="winter">snowy</h5>
-  <h5 class="winter">white</h5>
-  <img src="winter.jpg"
-       alt="Winter woods">
-
-  <p>from EpicV27 on Wikimedia Commons - GFDL</p>
-
-<!-- Spring-->
-  <h2 class="spring">Spring</h2>
-  <h5 class="spring">blooming</h5>
-  <h5 class="spring">flourishing </h5>
-  <h5 class="spring">invigorating</h5>
-  <h5 class="spring">pretty</h5>
-  <h5 class="spring">rainy</h5>
-  <img src="spring.jpg"
-       alt="Spring Flowers" >
-
-<p>from Pexels - CC0</p>
-
-  <!-- Summer-->
-  <h2 class="summer">Summer</h2>
-  <h5 class="summer">beautiful</h5>
-  <h5 class="summer">bright</h5>
-  <h5 class="summer">cheerful</h5>
-  <h5 class="summer">hot</h5>
-  <h5 class="summer">sunny</h5>
-  <img src="summer.jpg"
-       alt="Summer Beach" >
-
-<p>from Rukiasan on StockKite - CC0</p>
-
-  <!-- Fall-->
-  <h2 class="fall">Fall</h2>
-  <h5 class="fall">brisk</h5>
-  <h5 class="fall">changing</h5>
-  <h5 class="fall">colorful</h5>
-  <h5 class="fall">crisp </h5>
-  <h5 class="fall">vibrant</h5>
-  <img src="fall.jpeg" 
-       alt="Bench in fall" >
-
-<p>from Pexels - CC0</p>
-
-</body>
+    <h3> My top 5 animes</h3>
+  <ol>
+  <li> Dragon Ball Z</li>
+  <li> Naruto</li>
+  <li> Yu-gi-oh</li>
+  <li> Attack on titan</li>
+  <li> Death note</li>
+    </ol>
+    <img src=z-anime.jpg alt=anime>
+    <p> anime collage found on commons.wikimedia.org</p>
+    
+   
+    
+   
+ </body>
 </html>
